// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComponentAPI renders with mandatory props for one component 1`] = `
<DocumentFragment>
  .emotion-22 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-22 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-22 {
    margin-left: 8.333333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-22 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-21 {
  margin-bottom: 40px;
}

.emotion-20 {
  overflow-x: auto;
}

.emotion-19 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-0 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
}

.emotion-1 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-4 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-18 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-5 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-8 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-6 {
  margin: 0;
  padding: 0;
  color: #555E74;
  white-space: nowrap;
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.5;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-6 svg {
  fill: #555E74;
}

.emotion-17 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 24px;
  height: 24px;
}

.emotion-15 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #148F39;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-15 svg {
  width: 16px;
  height: 16px;
}

.emotion-15 svg {
  fill: #148F39;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-13 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-13 {
    max-width: 100%;
  }
}

.emotion-11 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-11.emotion-11 {
  fill: #148F39;
}

<div
    class="emotion-22"
  >
    <div
      class="emotion-21"
    >
      <div
        class="emotion-20"
      >
        <table
          class="emotion-19"
        >
          <thead>
            <tr>
              <th
                class="emotion-0"
              >
                Name
              </th>
              <th
                class="emotion-1"
              >
                Type
              </th>
              <th
                class="emotion-1"
              >
                Default
              </th>
              <th
                class="emotion-1"
              >
                Description
              </th>
              <th
                class="emotion-4"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-18"
            >
              <td
                class="emotion-5"
              >
                children
              </td>
              <td
                class="emotion-8"
              >
                <div
                  class="emotion-7"
                >
                  <p
                    class="emotion-6"
                  >
                    string
                  </p>
                </div>
              </td>
              <td
                class="emotion-8"
              />
              <td
                class="emotion-8"
              >
                Description.
              </td>
              <td
                class="emotion-17"
              >
                <div
                  class="emotion-16"
                >
                  <div
                    class="emotion-15"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-14"
                    >
                      <div
                        class="emotion-13"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-11 emotion-12"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ComponentAPI renders with props for multiple components 1`] = `
<DocumentFragment>
  .emotion-82 {
  box-sizing: border-box;
  background-clip: padding-box;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

@media screen {
  .emotion-82 {
    padding: 0 8px;
    margin-top: 16px;
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    max-width: 100%;
  }
}

@media screen and (min-width:768px) {
  .emotion-82 {
    margin-left: 8.333333333333334%;
  }
}

@media screen and (min-width:1024px) {
  .emotion-82 {
    padding: 0 12px;
    margin-top: 24px;
    -webkit-flex-basis: 66.66666666666667%;
    -ms-flex-preferred-size: 66.66666666666667%;
    flex-basis: 66.66666666666667%;
    max-width: 66.66666666666667%;
  }
}

.emotion-25 {
  margin-bottom: 40px;
}

.emotion-24 {
  overflow-x: auto;
}

.emotion-23 {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}

.emotion-4 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 64px;
  white-space: nowrap;
}

.emotion-5 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  min-width: 100px;
  white-space: nowrap;
}

.emotion-8 {
  border-style: solid;
  border-color: #BBC3C9;
  border-width: 0 0 1px 0;
  color: #162740;
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.6;
  font-weight: 700;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  margin-bottom: 16px;
  height: 40px;
  text-align: left;
  vertical-align: top;
  width: 100px;
  white-space: nowrap;
}

.emotion-22 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 0 0 1px 0;
  color: #555E74;
  font-family: 'DM Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 400;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-9 {
  padding: 16px 16px 16px 0;
  text-align: left;
  vertical-align: top;
}

.emotion-12 {
  padding: 16px 16px 16px 0;
  min-width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-10 {
  margin: 0;
  padding: 0;
  color: #555E74;
  white-space: nowrap;
  font-family: 'DM Mono',monospace;
  font-size: 14px;
  font-weight: 500;
  line-height: 1.5;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-10 svg {
  fill: #555E74;
}

.emotion-21 {
  padding: 16px 16px 16px 0;
  width: 100px;
  text-align: left;
  vertical-align: top;
}

.emotion-20 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 24px;
  height: 24px;
}

.emotion-19 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 24px;
  height: 24px;
  padding: 0;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  border-style: solid;
  border-color: #148F39;
  background-color: #E6FAEB;
  border-radius: 50%;
  border-width: 1px;
}

.emotion-19 svg {
  width: 16px;
  height: 16px;
}

.emotion-19 svg {
  fill: #148F39;
}

.emotion-18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-4px/2);
  margin-right: calc(-4px/2);
}

.emotion-17 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(4px/2);
  margin-right: calc(4px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-17 {
    max-width: 100%;
  }
}

.emotion-15 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #148F39;
  vertical-align: unset;
  display: inline-block;
}

.emotion-15.emotion-15 {
  fill: #148F39;
}

@media screen and (max-width:767px) {
  .emotion-1 {
    margin-bottom: 16px;
  }
}

@media screen and (min-width:768px) {
  .emotion-1 {
    margin-bottom: 20px;
  }
}

.emotion-0 {
  margin: 0;
  padding: 1px 0;
  color: #162740;
  display: inline-block;
}

.emotion-0 svg {
  fill: #162740;
}

@media screen and (max-width:1439px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 20px;
    line-height: 1.4;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.24062499999999998em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.490625em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-0 {
    font-family: 'Poppins',sans-serif;
    font-size: 24px;
    line-height: 1.3333333333333333;
    font-weight: 700;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-0::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.20729166666666665em;
  }

  .emotion-0::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.45729166666666665em;
  }
}

.emotion-3 {
  margin-bottom: 32px;
}

.emotion-2 {
  margin: 0;
  padding: 1px 0;
  color: #555E74;
}

.emotion-2 svg {
  fill: #555E74;
}

@media screen and (max-width:1439px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 16px;
    line-height: 1.5;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.415625em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.446875em;
  }
}

@media screen and (min-width:1440px) {
  .emotion-2 {
    font-family: 'DM Sans',sans-serif;
    font-size: 18px;
    line-height: 1.3333333333333333;
    font-weight: 400;
    -webkit-letter-spacing: 0;
    -moz-letter-spacing: 0;
    -ms-letter-spacing: 0;
    letter-spacing: 0;
  }

  .emotion-2::before {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-bottom: -0.33229166666666665em;
  }

  .emotion-2::after {
    content: '';
    display: block;
    height: 0;
    width: 0;
    margin-top: -0.36354166666666665em;
  }
}

.emotion-80 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
}

.emotion-45 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 32px;
}

.emotion-44 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  width: 100%;
  border-width: 0;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.emotion-34 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
}

.emotion-33 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  width: 100%;
  padding: 24px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #808E99;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
  background-color: transparent;
  color: #577FFB;
}

.emotion-33 svg {
  width: 16px;
  height: 16px;
}

.emotion-33 svg {
  fill: #555E74;
}

.emotion-33:hover:not(:disabled) {
  background-color: #E0E7FF;
  color: #577FFB;
}

.emotion-33:hover:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-33:active:not(:disabled) {
  background-color: #AEBFFF;
  color: #577FFB;
}

.emotion-33:active:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-33:disabled {
  background-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-33:disabled svg {
  fill: #BBC3C9;
}

.emotion-33 svg {
  fill: #577FFB;
}

.emotion-32 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-31 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

@media all and (-ms-high-contrast:none),(-ms-high-contrast:active) {
  .emotion-31 {
    max-width: 100%;
  }
}

.emotion-30 {
  font-family: 'Poppins',sans-serif;
  font-size: 12px;
  line-height: 1.6666666666666667;
  font-weight: 600;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
}

.emotion-30::before {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-bottom: calc(-0.3739583333333334em + -0.5px);
}

.emotion-30::after {
  content: '';
  display: block;
  height: 0;
  width: 0;
  margin-top: -0.6239583333333334em;
}

.emotion-39 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  min-height: 32px;
  width: 100%;
  padding: 24px 16px;
  cursor: default;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  overflow: hidden;
  background-color: transparent;
  color: #808E99;
  -webkit-transition-property: background-color;
  transition-property: background-color;
  -webkit-transition-duration: 200ms;
  transition-duration: 200ms;
  -webkit-transition-timing-function: cubic-bezier(0,0,.5,1);
  transition-timing-function: cubic-bezier(0,0,.5,1);
  cursor: pointer;
}

.emotion-39 svg {
  width: 16px;
  height: 16px;
}

.emotion-39 svg {
  fill: #555E74;
}

.emotion-39:hover:not(:disabled) {
  background-color: #E0E7FF;
  color: #577FFB;
}

.emotion-39:hover:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-39:active:not(:disabled) {
  background-color: #AEBFFF;
  color: #577FFB;
}

.emotion-39:active:not(:disabled) svg {
  fill: #577FFB;
}

.emotion-39:disabled {
  background-color: #E4E4E4;
  color: #BBC3C9;
}

.emotion-39:disabled svg {
  fill: #BBC3C9;
}

.emotion-42 {
  background-color: #E4E4E4;
  display: block;
  position: absolute;
  width: 100%;
  height: 2px;
  bottom: 0px;
  left: 0px;
}

.emotion-43 {
  background-color: #577FFB;
  position: absolute;
  bottom: 0px;
  left: 0px;
}

.emotion-67 {
  margin: 0;
  padding: 1px 0;
  width: 100%;
}

<div
    class="emotion-82"
  >
    <div
      class="emotion-25"
    >
      <div
        class="emotion-1"
      >
        <span
          class="emotion-0"
        >
          Button1
        </span>
      </div>
      <div
        class="emotion-3"
      >
        <p
          class="emotion-2"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-24"
      >
        <table
          class="emotion-23"
        >
          <thead>
            <tr>
              <th
                class="emotion-4"
              >
                Name
              </th>
              <th
                class="emotion-5"
              >
                Type
              </th>
              <th
                class="emotion-5"
              >
                Default
              </th>
              <th
                class="emotion-5"
              >
                Description
              </th>
              <th
                class="emotion-8"
              >
                Required
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="emotion-22"
            >
              <td
                class="emotion-9"
              >
                children
              </td>
              <td
                class="emotion-12"
              >
                <div
                  class="emotion-11"
                >
                  <p
                    class="emotion-10"
                  >
                    string
                  </p>
                </div>
              </td>
              <td
                class="emotion-12"
              />
              <td
                class="emotion-12"
              >
                Description
              </td>
              <td
                class="emotion-21"
              >
                <div
                  class="emotion-20"
                >
                  <div
                    class="emotion-19"
                    data-testid="flag"
                  >
                    <div
                      class="emotion-18"
                    >
                      <div
                        class="emotion-17"
                      >
                        <svg
                          aria-hidden="true"
                          class="emotion-15 emotion-16"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M0 0h24v24H0V0z"
                            fill="none"
                          />
                          <path
                            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="emotion-25"
    >
      <div
        class="emotion-1"
      >
        <span
          class="emotion-0"
        >
          Button2
        </span>
      </div>
      <div
        class="emotion-3"
      >
        <p
          class="emotion-2"
        >
          Component Props
        </p>
      </div>
      <div
        class="emotion-80"
        data-testid="tab-group"
      >
        <div
          class="emotion-45"
          data-testid="tab-bar"
        >
          <div
            aria-orientation="horizontal"
            class="emotion-44"
            role="tablist"
          >
            <div
              class="emotion-35"
              data-testid="distribution-wrapper"
            >
              <div
                class="emotion-34"
              >
                <button
                  aria-controls="mock-nk-1"
                  aria-selected="true"
                  class="emotion-33"
                  data-testid="tab"
                  id="mock-nk-1"
                  role="tab"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="emotion-32"
                  >
                    <div
                      class="emotion-31"
                    >
                      <span
                        class="emotion-30"
                      >
                        Props
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="emotion-35"
              data-testid="distribution-wrapper"
            >
              <div
                class="emotion-34"
              >
                <button
                  aria-controls="mock-nk-1"
                  aria-selected="false"
                  class="emotion-39"
                  data-testid="tab"
                  id="mock-nk-1"
                  role="tab"
                  tabindex="-1"
                  type="button"
                >
                  <div
                    class="emotion-32"
                  >
                    <div
                      class="emotion-31"
                    >
                      <span
                        class="emotion-30"
                      >
                        Overrides
                      </span>
                    </div>
                  </div>
                </button>
              </div>
            </div>
            <div
              class="emotion-42"
              data-testid="tab-bar-track"
              role="presentation"
            />
            <div
              aria-hidden="true"
              class="emotion-43"
              data-testid="tab-bar-indicator"
              role="presentation"
              style="width: 0px; height: 2px; transform: translateX(0px);"
            />
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-labelledby="mock-nk-1"
          class="emotion-67"
          data-testid="tab-panel"
          role="tabpanel"
          tabindex="0"
        >
          <div
            class="emotion-24"
          >
            <table
              class="emotion-23"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-4"
                  >
                    Name
                  </th>
                  <th
                    class="emotion-5"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-5"
                  >
                    Default
                  </th>
                  <th
                    class="emotion-5"
                  >
                    Description
                  </th>
                  <th
                    class="emotion-8"
                  >
                    Required
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-22"
                >
                  <td
                    class="emotion-9"
                  >
                    children
                  </td>
                  <td
                    class="emotion-12"
                  >
                    <div
                      class="emotion-11"
                    >
                      <p
                        class="emotion-10"
                      >
                        string
                      </p>
                    </div>
                  </td>
                  <td
                    class="emotion-12"
                  />
                  <td
                    class="emotion-12"
                  >
                    Description
                  </td>
                  <td
                    class="emotion-21"
                  >
                    <div
                      class="emotion-20"
                    >
                      <div
                        class="emotion-19"
                        data-testid="flag"
                      >
                        <div
                          class="emotion-18"
                        >
                          <div
                            class="emotion-17"
                          >
                            <svg
                              aria-hidden="true"
                              class="emotion-15 emotion-16"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M0 0h24v24H0V0z"
                                fill="none"
                              />
                              <path
                                d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41L9 16.17z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-labelledby="mock-nk-1"
          class="emotion-67"
          data-testid="tab-panel"
          hidden=""
          role="tabpanel"
          tabindex="-1"
        >
          <div
            class="emotion-24"
          >
            <table
              class="emotion-23"
            >
              <thead>
                <tr>
                  <th
                    class="emotion-4"
                  >
                    Name
                  </th>
                  <th
                    class="emotion-5"
                  >
                    Type
                  </th>
                  <th
                    class="emotion-5"
                  >
                    Description
                  </th>
                </tr>
              </thead>
              <tbody>
                <tr
                  class="emotion-22"
                >
                  <td
                    class="emotion-9"
                  >
                    spaceInset
                  </td>
                  <td
                    class="emotion-12"
                  >
                    <div
                      class="emotion-11"
                    >
                      <p
                        class="emotion-10"
                      >
                        MQ&lt;string&gt;
                      </p>
                    </div>
                  </td>
                  <td
                    class="emotion-12"
                  >
                    Description.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
